authentication for gapi
